test post layout

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
-layout: default
-title: atmos.org ~ Corey Donohoe on the Internet
+layout: post
+title: 王泓钦的blog
 ---
 
-<img src="http://f.cl.ly/items/2i3O350d3k0o3L2D401M/Image%202013.10.20%207%3A47%3A06%20PM.png" alt="color photo ftl" />
-<p>I'm Corey. I live in San Francisco.</p>
+<img src="http://img5.douban.com/view/photo/raw/public/p453673306.jpg" alt="color photo ftl" />
+<p>I'm Marvin(王泓钦). I live in GuangZhou,China.</p>
