--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: post
 title: 王泓钦的blog
 ---
 
-<img src="http://img5.douban.com/view/photo/raw/public/p453673306.jpg" alt="color photo ftl" />
+<img src="images/cover.jpg" alt="color photo ftl" />
 <p>I'm Marvin(王泓钦). I live in GuangZhou,China.</p>
