--- a/posts.html
+++ b/posts.html
@@ -3,7 +3,7 @@ layout: default
 title: atmos.org ~ Corey Donohoe on the Internet
 ---
 
-<h1>Random Things I Typed Out</h1>
+<h1>My Posts</h1>
 <hr/>
 
 {% for post in site.posts %}
