--- a/story.html
+++ b/story.html
@@ -1,12 +1,17 @@
 ---
 layout: default
-title: my posts
+title: story
+tag:   story
 ---
 
-<h1>All</h1>
+<h1>Story</h1>
 <hr/>
 
 {% for post in site.posts %}
+  {% for tag in post.tags %}
+    {% if tag == page.tag %}
   <small>{{ post.date | date_to_string }}</small>
   <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+  {% endif %}
+  {% endfor %}
 {% endfor %}
