--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 layout: default
-title: 王泓钦的blog
 ---
 
 <img src="images/cover.jpg" alt="color photo ftl" />
-<p>I'm Marvin(王泓钦). I live in GuangZhou,China.</p>
+<p>I'm Marvin(王泓钦), a programer, lived in GuangZhou,China.</p>
