--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@ layout: default
 
 
 {% for post in site.posts %}
-  <small>{{ post.date | date_to_string }}</small>
+  <small>{{ post.date | date: "%Y-%m-%d" }}</small>
   <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
   <article>
     {{ post.content | truncatewords:15 }}
   </article>
-  <hr/>
 {% endfor %}
 
