--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
 ---
-layout: default
+layout: postlist
+title: All
+tag: all
 ---
-
-<!-- <img src="images/cover.jpg" alt="color photo ftl" /> -->
-
-
-{% for post in site.posts %}
-  <small>{{ post.date | date: "%Y-%m-%d" }}</small>
-  <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-  <article>
-    {{ post.content | truncatewords:15 }}
-  </article>
-{% endfor %}
 
