--- a/reading.html
+++ b/reading.html
@@ -1,16 +1,6 @@
 ---
-layout: default
-tag:  reading 
+layout: postlist
+tag:  reading
+title: Reading
 ---
 
-<h1>Reading</h1>
-<hr/>
-
-{% for post in site.posts %}
-  {% for tag in post.tags %}
-    {% if tag == page.tag %}
-  <small>{{ post.date | date_to_string }}</small>
-  <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-  {% endif %}
-  {% endfor %}
-{% endfor %}
