--- a/story.html
+++ b/story.html
@@ -1,16 +1,5 @@
 ---
-layout: default
+layout: postlist
 tag:   story
+title: Story
 ---
-
-<h1>Story</h1>
-<hr/>
-
-{% for post in site.posts %}
-  {% for tag in post.tags %}
-    {% if tag == page.tag %}
-  <small>{{ post.date | date_to_string }}</small>
-  <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-  {% endif %}
-  {% endfor %}
-{% endfor %}
