--- a/kindlenote/57qm57-wwrflhYvliKnmlq_mnLXlpKso5aWX6KOF5LiK5LiL5YaMKSAo57uP5YW4.html
+++ b/kindlenote/57qm57-wwrflhYvliKnmlq_mnLXlpKso5aWX6KOF5LiK5LiL5YaMKSAo57uP5YW4.html
@@ -3,6 +3,8 @@
 <head>
 <title>约翰·克利斯朵夫(套装上下册) (经典译林) (罗曼·罗兰(Romain Rolland)) </title></head>
 <body>
-<h2> 约翰·克利斯朵夫(套装上下册) (经典译林) (罗曼·罗兰(Romain Rolland)) </h2><p><div>1. 创造，无论从肉体方面还是从精神方面而言，就是脱离肉体的樊笼，卷进生命的漩涡，永存于天地之间。创造就是消灭死亡。</div>
+<h2> 约翰·克利斯朵夫(套装上下册) (经典译林) (罗曼·罗兰(Romain Rolland)) </h2><p><div>1. “虔诚地面对新来的一天吧。别想到一年后，十年后的事情。想想今天吧。把你的理论暂且搁一边吧。所有的理论，即便是道德理论都是无益的，是骗人的，都是帮倒忙的。别扭曲生活，先把今天过好。虔诚地对待每一天吧。热爱每一天，尊重每一天，特别是别摧残它，也别阻止它凋零。</div>
+<div>- 您在位置 #5802-5804的标注 | 添加于 2015年3月30日星期一 下午8:23:45</div></p>
+<p><div>2. 创造，无论从肉体方面还是从精神方面而言，就是脱离肉体的樊笼，卷进生命的漩涡，永存于天地之间。创造就是消灭死亡。</div>
 <div>- 您在位置 #5956-5957的标注 | 添加于 2015年3月30日星期一 下午11:00:07</div></p>
 </body></html>
