--- a/kindlenote/5o6o5ou_77yI5o-S5Zu-5pys77yJ77yI5p-P5p6X5Zu96ZmF55S15b2x6IqC6ZO2.html
+++ b/kindlenote/5o6o5ou_77yI5o-S5Zu-5pys77yJ77yI5p-P5p6X5Zu96ZmF55S15b2x6IqC6ZO2.html
@@ -3,6 +3,82 @@
 <head>
 <title>推拿（插图本）（柏林国际电影节银熊奖；台湾电影金马奖六项大奖得主之原著小说；茅盾文学奖获奖作品） (毕飞宇) </title></head>
 <body>
-<h2> 推拿（插图本）（柏林国际电影节银熊奖；台湾电影金马奖六项大奖得主之原著小说；茅盾文学奖获奖作品） (毕飞宇) </h2><p><div>1. 盲人一般不和健全人打交道的根本缘由。在盲人的心目中，健全人是另外的一种动物，是更高一级的动物，是有眼睛的动物，是无所不知的动物，具有神灵的意味。他们对待健全人的态度完全等同于健全人对待鬼神的态度：敬鬼神而远之。</div>
+<h2> 推拿（插图本）（柏林国际电影节银熊奖；台湾电影金马奖六项大奖得主之原著小说；茅盾文学奖获奖作品） (毕飞宇) </h2><p><div>1. 大笑</div>
+<div>- 您在位置 #61 的笔记 | 添加于 2015年5月8日星期五 下午7:06:08</div></p>
+<p><div>2. 沙复明听出来了，司机是淮阴人。淮阴人民和全国人民一样，都喜欢“日”人家的妈。但淮阴人有淮阴人的高标准和严要求，只日“亲妈”，不亲的坚决不日。</div>
+<div>- 您在位置 #60-61的标注 | 添加于 2015年5月8日星期五 下午7:06:08</div></p>
+<p><div>3. 专业</div>
+<div>- 您在位置 #161 的笔记 | 添加于 2015年5月8日星期五 下午7:36:30</div></p>
+<p><div>4. 如果力道不足，通常的做法是“使劲”。推拿师一“使劲”就不好了，客人一定疼。这疼是落在肌肤上的，弄不好都有可能伤及客人的筋骨。推拿的力量讲究的是入木三分，那力道是沉郁的，下坠的，雄浑的，当然，还有透彻，一直可以灌注到肌肉的深处。疼也疼，却伴随着酸，还有胀。有不能言说的舒坦。</div>
+<div>- 您在位置 #159-161的标注 | 添加于 2015年5月8日星期五 下午7:36:30</div></p>
+<p><div>5. 别人的爱情</div>
+<div>- 您在位置 #172 的笔记 | 添加于 2015年5月8日星期五 下午7:40:30</div></p>
+<p><div>6. 恋爱是什么？王大夫体会了一阵子，体会明白了，无非就是一点，心疼。</div>
+<div>- 您在位置 #172-172的标注 | 添加于 2015年5月8日星期五 下午7:40:30</div></p>
+<p><div>7. 有力量感</div>
+<div>- 您在位置 #188 的笔记 | 添加于 2015年5月8日星期五 下午7:49:26</div></p>
+<p><div>8. 突然就把小孔的手甩了出去，最终却落在了他的脸上。啪地就是一个大嘴巴。</div>
+<div>- 您在位置 #188-188的标注 | 添加于 2015年5月8日星期五 下午7:49:26</div></p>
+<p><div>9. 盲人就是这点不好，因为自己看不见，无论有什么秘密，总是疑心别人都看得清清楚楚的，一点掩饰的余地都没有了。</div>
+<div>- 您在位置 #225-226的标注 | 添加于 2015年5月8日星期五 下午7:53:37</div></p>
+<p><div>10. 人情练达</div>
+<div>- 您在位置 #262 的笔记 | 添加于 2015年5月8日星期五 下午8:03:22</div></p>
+<p><div>11. 当然，店里有店里的规矩，得按次序滚动。可次序又有什么用？次序永远是由人把控的。随便举一个例子，你总要上厕所吧？你上厕所的时候一个大款进来了，前台如果照顾你，先让大款“坐一坐”，“喝杯水”，这有什么破绽么？没有。等你方便完了，轻轻松松地出来了，大款就顺到你的手上了。反过来，你刚刚进了厕所的门，前台立即就给“下一个”安排下去，等你从厕所里头汤汤水水地赶回来，大款已经躺在别人的床上说笑了。——</div>
+<div>- 您在位置 #258-262的标注 | 添加于 2015年5月8日星期五 下午8:03:22</div></p>
+<p><div>12. 哈哈</div>
+<div>- 您在位置 #282 的笔记 | 添加于 2015年5月8日星期五 下午8:07:07</div></p>
+<p><div>13. 前厅和推拿房的分别，就如同屁股蛋子左侧和右侧，表面上没有任何区别，可中间隔着好大的一条沟呢。</div>
+<div>- 您在位置 #281-282的标注 | 添加于 2015年5月8日星期五 下午8:07:07</div></p>
+<p><div>14. 叙述干脆</div>
+<div>- 您在位置 #570 的笔记 | 添加于 2015年5月9日星期六 上午11:32:40</div></p>
+<p><div>15. 咣当一声，他把碗砸在了门框上，手里却捏着一块瓷片。</div>
+<div>- 您在位置 #570-570的标注 | 添加于 2015年5月9日星期六 上午11:32:40</div></p>
+<p><div>16. 言简意赅</div>
+<div>- 您在位置 #630 的笔记 | 添加于 2015年5月9日星期六 上午11:47:15</div></p>
+<p><div>17. 厚道，强壮，勤快，却嘴笨。是可以吃亏、能够受气的那一路。脑子又不活络，说话慢腾腾的，还有软绵绵的笑容衬在后头——</div>
+<div>- 您在位置 #629-630的标注 | 添加于 2015年5月9日星期六 上午11:47:15</div></p>
+<p><div>18. 原来如此</div>
+<div>- 您在位置 #721 的笔记 | 添加于 2015年5月9日星期六 下午12:00:22</div></p>
+<p><div>19. 盲人是很容易养成规律的。他们特别在意培养并遵守生活上的规律，一般不轻易更改。一件事，如果第一次是这么做的，接下来他们也一定还是这么做。规律是他们的命根子，要不然就会吃苦头。随便举一个例子，走路时拐弯，你一定得按照以往的规律走，——多一步你不能拐，少一步你同样不能拐。一拐你的门牙就没了。</div>
+<div>- 您在位置 #718-721的标注 | 添加于 2015年5月9日星期六 下午12:00:22</div></p>
+<p><div>20. 见血</div>
+<div>- 您在位置 #870 的笔记 | 添加于 2015年5月9日星期六 下午12:15:13</div></p>
+<p><div>21. 演出。“慈善演出”是什么，“爱心行动”是什么，她算是明白了。说到底，就是把残疾人拉出来让身体健全的人感动。</div>
+<div>- 您在位置 #869-870的标注 | 添加于 2015年5月9日星期六 下午12:15:13</div></p>
+<p><div>22. 勇气。看起来盲人最大的障碍不是视力，而是勇气，是过当的自尊所导致的弱不禁风。沙</div>
+<div>- 您在位置 #949-950的标注 | 添加于 2015年5月9日星期六 下午12:24:12</div></p>
+<p><div>23. 细想之下格外悲伤</div>
+<div>- 您在位置 #1544 的笔记 | 添加于 2015年5月9日星期六 下午1:57:09</div></p>
+<p><div>24. 棍。“美”的当事人居然也是什么都不知道的。这让沙复明有一种说不出口的悲哀。这悲哀阒然不动，却能够兴风作浪。</div>
+<div>- 您在位置 #1543-1544的标注 | 添加于 2015年5月9日星期六 下午1:57:09</div></p>
+<p><div>25. 原来如此</div>
+<div>- 您在位置 #1558 的笔记 | 添加于 2015年5月9日星期六 下午1:58:59</div></p>
+<p><div>26. 盲人和所有的人一样，到了恋爱的关头都十分在意一件事，那就是恋人的长相。但是，有一点又不一样了，盲人们不得不把“别人”的意见记在心上，做算术一样，一点一点地运算，最后，得到的答案仿佛是私人的，骨子里却是公共的。盲人一辈子生活在“别人”的评头论足里，没有我，只有他，只有导演，只有导演们。就在“别人”的评头论足里，盲人拥有了盲人的一见钟情，盲人拥有了盲人的惊鸿一瞥或惊艳一绝。</div>
+<div>- 您在位置 #1555-1558的标注 | 添加于 2015年5月9日星期六 下午1:58:59</div></p>
+<p><div>27. 大悲伤啊</div>
+<div>- 您在位置 #1608 的笔记 | 添加于 2015年5月9日星期六 下午2:04:53</div></p>
+<p><div>28. 女孩子却顽皮了，执意让他大声地说出她的名字。“告诉我，我是谁？” 沙复明抽回自己的胳膊。静默了好大的一会儿，沙复明终于说：“我，不识字的。”</div>
+<div>- 您在位置 #1607-1608的标注 | 添加于 2015年5月9日星期六 下午2:04:53</div></p>
+<p><div>29. 前面一段铺垫 原来在这里等着</div>
+<div>- 您在位置 #1608 的笔记 | 添加于 2015年5月9日星期六 下午2:05:58</div></p>
+<p><div>30. 后面对小马玩时间的描述 写出了无奈心甘的寂寞 但并不孤独</div>
+<div>- 您在位置 #1704 的笔记 | 添加于 2015年5月9日星期六 下午2:29:13</div></p>
+<p><div>31. 其实，小马的安静是假的，他在玩。玩他的玩具。没有一个人知道他的玩具是什么。他的玩具是时间。</div>
+<div>- 您在位置 #1703-1704的标注 | 添加于 2015年5月9日星期六 下午2:29:13</div></p>
+<p><div>32. 哈</div>
+<div>- 您在位置 #2017 的笔记 | 添加于 2015年5月10日星期日 上午1:46:58</div></p>
+<p><div>33. “比红烧肉还要好看。”</div>
+<div>- 您在位置 #2017-2017的标注 | 添加于 2015年5月10日星期日 上午1:46:58</div></p>
+<p><div>34. 后面几个婚姻的比喻很有意思</div>
+<div>- 您在位置 #2324 的笔记 | 添加于 2015年5月10日星期日 上午2:23:31</div></p>
+<p><div>35. 婚礼是无所不在的。金嫣每时每刻都在婚礼上。</div>
+<div>- 您在位置 #2323-2324的标注 | 添加于 2015年5月10日星期日 上午2:23:31</div></p>
+<p><div>36. 形象</div>
+<div>- 您在位置 #2749 的笔记 | 添加于 2015年5月10日星期日 下午3:04:46</div></p>
+<p><div>37. 因为再也不能看见光，在相当长的时间里，张一光认准了自己还在井下。他的手上永远紧握着一根棍子，当恐惧来临的时候，他就坐在凳子上，用棍子往上捅。这一捅手上就有数了，头上是屋顶，不是在井下。</div>
+<div>- 您在位置 #2748-2749的标注 | 添加于 2015年5月10日星期日 下午3:04:46</div></p>
+<p><div>38. 原来如此</div>
+<div>- 您在位置 #3051 的笔记 | 添加于 2015年5月10日星期日 下午6:01:00</div></p>
+<p><div>39. 盲人一般不和健全人打交道的根本缘由。在盲人的心目中，健全人是另外的一种动物，是更高一级的动物，是有眼睛的动物，是无所不知的动物，具有神灵的意味。他们对待健全人的态度完全等同于健全人对待鬼神的态度：敬鬼神而远之。</div>
 <div>- 您在位置 #3049-3051的标注 | 添加于 2015年5月10日星期日 下午6:01:00</div></p>
 </body></html>
