--- a/kindlenote/5pWF5LqL77ya5p2Q6LSo44CB57uT5p6E44CB6aOO5qC85ZKM6ZO25bmV5Ymn5L2c.html
+++ b/kindlenote/5pWF5LqL77ya5p2Q6LSo44CB57uT5p6E44CB6aOO5qC85ZKM6ZO25bmV5Ymn5L2c.html
@@ -3,6 +3,156 @@
 <head>
 <title>故事：材质、结构、风格和银幕剧作的原理 (罗伯特∙麦基) </title></head>
 <body>
-<h2> 故事：材质、结构、风格和银幕剧作的原理 (罗伯特∙麦基) </h2><p><div>1. 喜剧人物的显著特征就是盲目执迷。</div>
+<h2> 故事：材质、结构、风格和银幕剧作的原理 (罗伯特∙麦基) </h2><p><div>1. 知觉力和想象力</div>
+<div>- 您在位置 #410-411的标注 | 添加于 2014年10月30日星期四 下午11:55:02</div></p>
+<p><div>2. 文学天才——</div>
+<div>- 您在位置 #412-412的标注 | 添加于 2014年10月30日星期四 下午11:56:30</div></p>
+<p><div>3. 是故事天才——</div>
+<div>- 您在位置 #415-415的标注 | 添加于 2014年10月30日星期四 下午11:56:34</div></p>
+<p><div>4. 没有不含转折的场景。</div>
+<div>- 您在位置 #524-524的标注 | 添加于 2014年10月31日星期五 上午10:31:43</div></p>
+<p><div>5. 场景是在某一相对连续的时空中，通过冲突表现出来的一段动作，这段动作至少在一个重要程度可以感知的价值层面上，使人物生活中负荷着价值的情境发生转折。理想的场景即是一个故事事件。</div>
+<div>- 您在位置 #513-514的标注 | 添加于 2014年10月31日星期五 上午10:35:27</div></p>
+<p><div>6. 序列是一系列场景——一般两到五个，每一个场景的冲击力呈递增趋势，直到最后到达顶峰。</div>
+<div>- 您在位置 #558-559的标注 | 添加于 2014年10月31日星期五 上午10:36:51</div></p>
+<p><div>7. 故事高潮：故事是一系列幕的组合，渐次构成一个最后的幕高潮，又称故事高潮，从而引发出绝对而不可逆转的变化。</div>
+<div>- 您在位置 #614-615的标注 | 添加于 2014年10月31日星期五 上午10:45:43</div></p>
+<p><div>8. 设计情节是指在故事的危险地形上航行，当面临无数岔道时选择正确的航道。情节就是作者对事件的选择以及对其在时间中的设计。</div>
+<div>- 您在位置 #630-631的标注 | 添加于 2014年10月31日星期五 上午10:48:25</div></p>
+<p><div>9. 即如约翰·卡彭特所说：“电影就是将精神的东西物化。”</div>
+<div>- 您在位置 #639-639的标注 | 添加于 2014年10月31日星期五 上午10:49:13</div></p>
+<p><div>10. 无论有无闪回，一个故事的事件如果被安排成一个观众能够跟踪的时间顺序，那么这个故事便是按照线性时间来讲述的。 如果一个故事在时间中随意跳跃，从而模糊了时间的连续性，以致观众无从判断什么发生在前什么发生在后，那么这个故事便是按照非线性时间来讲述的。</div>
+<div>- 您在位置 #726-729的标注 | 添加于 2014年11月3日星期一 下午7:19:50</div></p>
+<p><div>11. 因此，连贯现实是指一个内部连贯一致的世界，其本身必须能够自圆其说。</div>
+<div>- 您在位置 #763-763的标注 | 添加于 2014年11月3日星期一 下午7:24:32</div></p>
+<p><div>12. 影片结尾处，人物生活中负荷价值的情境几乎和开始处完全等同。故事消解为呆板刻画，要么是对生活的逼真刻画，要么是荒诞刻画。我把这种影片定名为非情节。</div>
+<div>- 您在位置 #804-806的标注 | 添加于 2014年11月3日星期一 下午7:30:32</div></p>
+<p><div>13. 一切陈词滥调的根源都可以追溯到一个原因，而且也是唯一的原因：作者不了解他故事中的世界。</div>
+<div>- 您在位置 #953-953的标注 | 添加于 2014年11月4日星期二 上午10:41:40</div></p>
+<p><div>14. 故事的背景是四维的——时代、期限、地点和冲突层面。</div>
+<div>- 您在位置 #959-959的标注 | 添加于 2014年11月4日星期二 下午12:47:49</div></p>
+<p><div>15. 一个诚实的故事只可能在一个地点和时间内适得其所。</div>
+<div>- 您在位置 #1000-1000的标注 | 添加于 2014年11月4日星期二 下午12:51:37</div></p>
+<p><div>16. 一切优秀的故事都发生在一个有限的、可知的世界内。</div>
+<div>- 您在位置 #1003-1004的标注 | 添加于 2014年11月4日星期二 下午12:54:47</div></p>
+<p><div>17. 背景对故事的反讽表现在：世界越大，作者的知识便越被稀释，其创作选择也就越少，故事便越发充满陈词滥调。世界越小，作者的知识便越完善，其创作选择也就越多。结果是一个完全新颖的故事，以及对陈词滥调作战的胜利。</div>
+<div>- 您在位置 #1019-1022的标注 | 添加于 2014年11月4日星期二 下午12:57:09</div></p>
+<p><div>18. ◎ 调查研究 打赢这场仗的关键就是研究，花时间和精力去获得知识。我建议采用以下具体方法：记忆研究、想象研究、事实研究。一般而言，一个故事对此三样缺一不可。</div>
+<div>- 您在位置 #1022-1023的标注 | 添加于 2014年11月7日星期五 上午12:09:07</div></p>
+<p><div>19. 记忆研究、想象研究、事实研究。</div>
+<div>- 您在位置 #1023-1023的标注 | 添加于 2014年11月7日星期五 上午12:10:42</div></p>
+<p><div>20. 研究是喂哺想象和发明这两头野兽的肉，其本身并不是目的。研究也不存在一个必要的程序。我们并不是要在笔记本上填满有关社会的、传记的和历史的研究笔记之后，才开始构思故事。创作很少会如此理性。</div>
+<div>- 您在位置 #1061-1062的标注 | 添加于 2014年11月7日星期五 上午12:48:35</div></p>
+<p><div>21. 创作是指在取舍过程中所做出的创造性选择。</div>
+<div>- 您在位置 #1078-1079的标注 | 添加于 2014年11月7日星期五 上午12:50:06</div></p>
+<p><div>22. 一个故事可以以正负荷结局，也可以以负负荷结尾。</div>
+<div>- 您在位置 #1122-1122的标注 | 添加于 2014年11月7日星期五 上午9:26:30</div></p>
+<p><div>23. 简单悲剧、简单幸运剧、复杂悲剧、复杂幸运剧。</div>
+<div>- 您在位置 #1123-1124的标注 | 添加于 2014年11月7日星期五 上午9:26:43</div></p>
+<p><div>24. 但自传影片常常缺少它们所许诺的最重要的品质：自知。</div>
+<div>- 您在位置 #1190-1191的标注 | 添加于 2014年11月7日星期五 上午10:13:34</div></p>
+<p><div>25. 类型常规是界定各个类型及其次类型的具体背景、角色、事件和价值。</div>
+<div>- 您在位置 #1228-1228的标注 | 添加于 2014年11月7日星期五 上午10:24:10</div></p>
+<p><div>26. 喜剧也包含无数次类型，且每一种都有自己的常规。同时，一个最高常规统领着这一超大类型，并将它与正剧区分开来：无人受到伤害。</div>
+<div>- 您在位置 #1240-1241的标注 | 添加于 2014年11月7日星期五 上午10:25:48</div></p>
+<p><div>27. 在艺术和大众之间并无必然矛盾，在艺术和艺术电影之间也并无必然联系。</div>
+<div>- 您在位置 #1261-1261的标注 | 添加于 2014年11月7日星期五 上午10:31:49</div></p>
+<p><div>28. 如果一部影片能得到适当的宣传推广，观众来到影院时都是满怀期待的。用营销人员的行话来说，就是观众已经被“定位”。“</div>
+<div>- 您在位置 #1272-1273的标注 | 添加于 2014年11月7日星期五 下午12:42:52</div></p>
+<p><div>29. 创作限制的原理讲求在一个障碍圈内获得自由。天才就像肌肉一样：如果没有阻力，它就会萎缩。</div>
+<div>- 您在位置 #1292-1293的标注 | 添加于 2014年11月7日星期五 下午12:47:29</div></p>
+<p><div>30. 社会态度是会变化的。</div>
+<div>- 您在位置 #1379-1379的标注 | 添加于 2014年11月7日星期五 下午1:04:30</div></p>
+<p><div>31. 人物性格真相1在人处于压力之下做出选择时得到揭示——压力越大，揭示越深，其选择便越真实地体现了人物的本性。</div>
+<div>- 您在位置 #1436-1437的标注 | 添加于 2014年11月11日星期二 上午10:35:38</div></p>
+<p><div>32. 对照或反衬人物塑造来揭示人物性格真相，是所有优秀故事讲述手法中的基本要素。</div>
+<div>- 您在位置 #1467-1468的标注 | 添加于 2014年11月12日星期三 上午10:42:53</div></p>
+<p><div>33. 对照或反衬人物塑造来揭示人物性格真相，是所有优秀故事讲述手法中的基本要素。生活教给我们这一宏大原则：看似如此其实并非如此。</div>
+<div>- 您在位置 #1467-1469的标注 | 添加于 2014年11月12日星期三 上午10:43:10</div></p>
+<p><div>34. 结构和人物是互相连锁的。故事的事件结构来自人物在其压力之下所做出的选择和采取的行动；而人物则是通过在压力之下的选择和行动来揭示和改变的生物。</div>
+<div>- 您在位置 #1518-1519的标注 | 添加于 2014年11月12日星期三 上午10:49:09</div></p>
+<p><div>35. 所有时间艺术的第一大训诫就是：“汝必留最佳于最后”8。</div>
+<div>- 您在位置 #1548-1549的标注 | 添加于 2014年11月12日星期三 上午10:53:15</div></p>
+<p><div>36. 但是，尽管生活将意义与情感分得很清，艺术却能将二者统一起来。故事是一种设备，通过它你可以随心所欲地创造出这种领悟，这种现象便是人们所熟知的审美情感。</div>
+<div>- 您在位置 #1590-1592的标注 | 添加于 2014年11月12日星期三 下午6:52:30</div></p>
+<p><div>37. 在生活中，体验需通过事后的反思变得有意义；而在艺术里，体验在其发生的那一瞬间马上就会具有意义。</div>
+<div>- 您在位置 #1599-1600的标注 | 添加于 2014年11月12日星期三 下午6:53:37</div></p>
+<p><div>38. 一切艺术都源自人类心灵对以下各方面最原始的、先于语言的需求：通过美与和谐来解决压力与不和，通过创造力的使用来复活被日常事务搞得死气沉沉的日子，通过我们对真理的本能感知来寻求与现实的联系。</div>
+<div>- 您在位置 #1592-1594的标注 | 添加于 2014年11月12日星期三 下午6:55:37</div></p>
+<p><div>39. 无论激发写作的灵感是什么，都不一定要保留在作品之中。前提并非稀世珍宝。如果它有助于故事的进展，则可保留，如若故事讲述意图偏转，则应舍弃那一原始灵感，顺应故事的发展轨迹。</div>
+<div>- 您在位置 #1627-1629的标注 | 添加于 2014年11月12日星期三 下午6:58:45</div></p>
+<p><div>40. 写作即是一种发现。</div>
+<div>- 您在位置 #1630-1630的标注 | 添加于 2014年11月12日星期三 下午6:58:54</div></p>
+<p><div>41. 故事讲述是对真理的创造性论证。一个故事是一个思想的活证据，完成思想到动作的转换。故事的事件结构是一种手段，你通过它来表达你的思想，并随后将其证明……且绝不采用任何解释性的话语。</div>
+<div>- 您在位置 #1635-1637的标注 | 添加于 2014年11月12日星期三 下午7:03:20</div></p>
+<p><div>42. 主控思想可以用一个句子来表达，描述出生活如何以及为何会从故事开始时的一种存在状况转化为故事结局时的另一种状况。</div>
+<div>- 您在位置 #1664-1665的标注 | 添加于 2014年11月13日星期四 上午10:10:13</div></p>
+<p><div>43. 你将体验到写作生活中感受最为强烈的一个时刻——自我认知：故事高潮反照出你的内在自我，如果故事来自你内心最好的源泉，通常的情况是，你会为自己看到的、它所反映的东西感到非常震惊。</div>
+<div>- 您在位置 #1702-1703的标注 | 添加于 2014年11月13日星期四 上午10:24:14</div></p>
+<p><div>44. 主人公是一个具有意志力的人物。</div>
+<div>- 您在位置 #1940-1940的标注 | 添加于 2014年11月14日星期五 下午1:04:17</div></p>
+<p><div>45. 主人公必须具有移情作用；同情作用则可有可无。</div>
+<div>- 您在位置 #1989-1989的标注 | 添加于 2014年11月18日星期二 下午11:29:11</div></p>
+<p><div>46. 实际上，最丰富、最满足的愉悦来自那些聚焦于事件导致的反应与所获见解的故事。</div>
+<div>- 您在位置 #2422-2423的标注 | 添加于 2014年11月21日星期五 下午1:26:11</div></p>
+<p><div>47. 故事的材质是鸿沟，是一个人采取行动时，期望发生的事情和实际发生的事情之间裂开的鸿沟；是期望和结果之间、或然性和必然性之间的断层。</div>
+<div>- 您在位置 #2441-2443的标注 | 添加于 2014年11月21日星期五 下午1:28:08</div></p>
+<p><div>48. 带着我们在时间中穿行而又不让我们意识到时间的流逝。</div>
+<div>- 您在位置 #2894-2895的标注 | 添加于 2014年11月24日星期一 上午10:39:29</div></p>
+<p><div>49. 重复是节奏的死敌。</div>
+<div>- 您在位置 #3096-3096的标注 | 添加于 2014年11月25日星期二 上午10:58:32</div></p>
+<p><div>50. 次情节可以用于与主情节的主控思想构成回响，从而以同一主题的多种变异来丰富影片。</div>
+<div>- 您在位置 #3122-3123的标注 | 添加于 2014年11月25日星期二 下午12:59:05</div></p>
+<p><div>51. 见解是观众注意听故事所得到的奖励，而且一个设计漂亮的故事能够一个场景接着一个场景地激发出这种愉悦。</div>
+<div>- 您在位置 #3272-3273的标注 | 添加于 2014年11月25日星期二 下午10:44:01</div></p>
+<p><div>52. 语言仅仅是我们的文本。自我表达只能产生于从转折点中喷涌而出的见解洪流，</div>
+<div>- 您在位置 #3275-3276的标注 | 添加于 2014年11月25日星期二 下午10:44:15</div></p>
+<p><div>53. 基调不能取代情感。当我们需要基调体验时，我们会去听音乐会或去参观博物馆。当我们需要意味深长的情感体验时，我们就会去听故事。</div>
+<div>- 您在位置 #3441-3442的标注 | 添加于 2014年11月26日星期三 上午12:32:50</div></p>
+<p><div>54. 善恶或是非之间的选择根本不是什么选择。</div>
+<div>- 您在位置 #3449-3450的标注 | 添加于 2014年11月26日星期三 上午10:25:03</div></p>
+<p><div>55. 真正的选择是两难之择。</div>
+<div>- 您在位置 #3460-3461的标注 | 添加于 2014年11月26日星期三 上午10:25:55</div></p>
+<p><div>56. 这种动作和反应的交流即是节拍。</div>
+<div>- 您在位置 #3609-3609的标注 | 添加于 2014年11月27日星期四 上午8:24:55</div></p>
+<p><div>57. 节奏是由场景的长度决定的。</div>
+<div>- 您在位置 #3960-3961的标注 | 添加于 2014年11月27日星期四 下午1:15:50</div></p>
+<p><div>58. 将故事意象的象征负荷从个别发展为普遍，从具体发展为原始模型。</div>
+<div>- 您在位置 #4036-4036的标注 | 添加于 2014年11月27日星期四 下午11:20:59</div></p>
+<p><div>59. 一个结局必须同时是“不可避免而又出乎意料”的。</div>
+<div>- 您在位置 #4244-4245的标注 | 添加于 2014年11月28日星期五 上午12:07:56</div></p>
+<p><div>60. 反面人物塑造原理：主人公及其故事的智慧魅力和情感魄力，必须与对抗力量相适应。</div>
+<div>- 您在位置 #4295-4296的标注 | 添加于 2014年11月28日星期五 上午12:13:10</div></p>
+<p><div>61. 一个在冲突的深度和广度上进展到人生体验极限的故事，必须依循以下型式来运行：这一型式必须包括相反价值、矛盾价值和否定之否定价值。</div>
+<div>- 您在位置 #4333-4334的标注 | 添加于 2014年11月28日星期五 上午12:17:27</div></p>
+<p><div>62. 只需披露观众绝对必需而且想要知道的解说信息，仅此而已。</div>
+<div>- 您在位置 #4514-4515的标注 | 添加于 2014年11月28日星期五 上午1:53:00</div></p>
+<p><div>63. 掸桌子”。</div>
+<div>- 您在位置 #4557-4557的标注 | 添加于 2014年11月28日星期五 上午1:56:15</div></p>
+<p><div>64. 我们只能采用以下两种方法之一来转折场景：要么通过动作，要么通过揭示。舍此，别无他法。</div>
+<div>- 您在位置 #4572-4572的标注 | 添加于 2014年11月28日星期五 上午1:57:13</div></p>
+<p><div>65. 最重要的是要让观众等待。</div>
+<div>- 您在位置 #4661-4661的标注 | 添加于 2014年11月28日星期五 上午10:34:08</div></p>
+<p><div>66. 这就是神秘谋杀，及其两个次类型：闭合神秘和开放神秘。</div>
+<div>- 您在位置 #4718-4719的标注 | 添加于 2014年11月28日星期五 上午10:40:11</div></p>
+<p><div>67. 在神秘状况下，观众知道得比人物少。</div>
+<div>- 您在位置 #4712-4712的标注 | 添加于 2014年11月28日星期五 上午10:41:08</div></p>
+<p><div>68. 在悬念中，观众和人物知道同样的信息。</div>
+<div>- 您在位置 #4732-4732的标注 | 添加于 2014年11月28日星期五 上午10:41:15</div></p>
+<p><div>69. 在戏剧反讽中，观众比人物知道得更多。</div>
+<div>- 您在位置 #4740-4740的标注 | 添加于 2014年11月28日星期五 上午10:42:10</div></p>
+<p><div>70. 虚假神秘是利用人为的隐瞒事实而制造的一种冒牌好奇。本来可以而且也应该告诉观众的解说事实被故意扣押，指望以此来保持观众的兴趣，好让他们看完冗长而且戏剧性欠缺的片断。</div>
+<div>- 您在位置 #4789-4790的标注 | 添加于 2014年11月28日星期五 上午10:46:25</div></p>
+<p><div>71. 尽早引入巧合，以给予它充分的时间来构建意义。</div>
+<div>- 您在位置 #4818-4819的标注 | 添加于 2014年11月28日星期五 上午10:50:13</div></p>
+<p><div>72. 当我们拨开喜剧那愤世嫉俗的讥诮面纱时，看到的是一个饱受挫折的理想主义者。</div>
+<div>- 您在位置 #4858-4858的标注 | 添加于 2014年11月28日星期五 上午10:55:40</div></p>
+<p><div>73. 正剧作家执迷于内心生活，人类心中的激情、罪孽、疯狂和梦想。但喜剧作家不会。他专注于社会生活——社会中的愚蠢、傲慢和残忍。喜剧作家会挑选出一个他觉得已经被虚伪和愚蠢所包裹的具体社会机构或制度，然后大肆攻击。</div>
+<div>- 您在位置 #4869-4871的标注 | 添加于 2014年11月28日星期五 上午10:56:30</div></p>
+<p><div>74. 默片时代第一个伟大发现就是追逐场面，</div>
+<div>- 您在位置 #4962-4962的标注 | 添加于 2014年11月28日星期五 下午1:17:47</div></p>
+<p><div>75. 维是指矛盾：</div>
+<div>- 您在位置 #5139-5139的标注 | 添加于 2014年12月1日星期一 上午10:20:07</div></p>
+<p><div>76. 喜剧人物的显著特征就是盲目执迷。</div>
 <div>- 您在位置 #5186-5186的标注 | 添加于 2014年12月1日星期一 上午10:42:39</div></p>
 </body></html>
