--- a/kindlenote/VGhlIEVsZW1lbnRzIG9mIFN0eWxlIChXaWxsaWFtIFN0cnVuaywgSnIuKQ==.html
+++ b/kindlenote/VGhlIEVsZW1lbnRzIG9mIFN0eWxlIChXaWxsaWFtIFN0cnVuaywgSnIuKQ==.html
@@ -3,6 +3,28 @@
 <head>
 <title>The Elements of Style (William Strunk, Jr.) </title></head>
 <body>
-<h2> The Elements of Style (William Strunk, Jr.) </h2><p><div>1. If a parenthetic expression is preceded by a conjunction, place the first comma before the conjunction, not after it.</div>
+<h2> The Elements of Style (William Strunk, Jr.) </h2><p><div>1. Restrictive relative clauses are not set off by commas.</div>
+<div>- 您在位置 #118-118的标注 | 添加于 2014年7月19日星期六 下午3:58:37</div></p>
+<p><div>2. Further, and, is the least specific of connectives. Used between independent clauses, it indicates only that a relation exists between them without defining that relation.</div>
+<div>- 您在位置 #138-139的标注 | 添加于 2014年7月19日星期六 下午4:06:37</div></p>
+<p><div>3. But a writer may err by making his sentences too uniformly compact and periodic, and an occasional loose sentence prevents the style from becoming too formal and gives the reader a certain relief.</div>
+<div>- 您在位置 #146-148的标注 | 添加于 2014年7月19日星期六 下午4:08:21</div></p>
+<p><div>4. semicolon may be better. see </div>
+<div>- 您在位置 #153 的笔记 | 添加于 2014年7月19日星期六 下午4:14:20</div></p>
+<p><div>5. clause, no</div>
+<div>- 您在位置 #153-153的标注 | 添加于 2014年7月19日星期六 下午4:14:20</div></p>
+<p><div>6. semicolon may be better. see section 4</div>
+<div>- 您在位置 #153 的笔记 | 添加于 2014年7月19日星期六 下午4:14:47</div></p>
+<p><div>7. semicolon may be better. see section 5</div>
+<div>- 您在位置 #153 的笔记 | 添加于 2014年7月19日星期六 下午4:15:15</div></p>
+<p><div>8. If the clauses are very short, and are alike in form, a comma is usually permissible:</div>
+<div>- 您在位置 #180-181的标注 | 添加于 2014年7月19日星期六 下午4:18:12</div></p>
+<p><div>9. The need of making a particular word the subject of the sentence will often, as in these examples, determine which voice is to be used.</div>
+<div>- 您在位置 #404-405的标注 | 添加于 2014年7月19日星期六 下午11:50:17</div></p>
+<p><div>10. A common fault is to use as the subject of a passive construction a noun which expresses the entire action, leaving to the verb no function beyond that of completing the sentence.</div>
+<div>- 您在位置 #428-429的标注 | 添加于 2014年7月20日星期日 上午12:06:39</div></p>
+<p><div>11. avoid making one passive depend directly upon another.</div>
+<div>- 您在位置 #420-420的标注 | 添加于 2014年7月20日星期日 上午12:07:21</div></p>
+<p><div>12. If a parenthetic expression is preceded by a conjunction, place the first comma before the conjunction, not after it.</div>
 <div>- 您在位置 #126-127的标注 | 添加于 2015年1月9日星期五 上午12:51:22</div></p>
 </body></html>
