--- a/kindlenote/R2VvcmdlIFIuIFIuIE1hcnRpbidzIEEgR2FtZSBvZiBUaHJvbmVzIDUtQm9vayBC.html
+++ b/kindlenote/R2VvcmdlIFIuIFIuIE1hcnRpbidzIEEgR2FtZSBvZiBUaHJvbmVzIDUtQm9vayBC.html
@@ -3,6 +3,18 @@
 <head>
 <title>George R. R. Martin's A Game of Thrones 5-Book Boxed Set (Song of Ice and Fire Series): A Game of Thrones, A Clash of Kings, A Storm of Swords, A Feast for Crows, and A Dance with Dragons (Martin, George R.R.) </title></head>
 <body>
-<h2> George R. R. Martin's A Game of Thrones 5-Book Boxed Set (Song of Ice and Fire Series): A Game of Thrones, A Clash of Kings, A Storm of Swords, A Feast for Crows, and A Dance with Dragons (Martin, George R.R.) </h2><p><div>1. “My people hold that there is no shame to be found in the pillow house. In the Summer Isles, those who are skilled at giving pleasure are greatly esteemed.</div>
+<h2> George R. R. Martin's A Game of Thrones 5-Book Boxed Set (Song of Ice and Fire Series): A Game of Thrones, A Clash of Kings, A Storm of Swords, A Feast for Crows, and A Dance with Dragons (Martin, George R.R.) </h2><p><div>1. He looked half a leaf, as if the first strong wind would carry him off to his grave.</div>
+<div>- 您在位置 #1592-1593的标注 | 添加于 2014年6月11日星期三 上午12:52:06</div></p>
+<p><div>2. We all need to be mocked from time to time, Lord Mormont, lest we start to take ourselves too seriously.</div>
+<div>- 您在位置 #3443-3444的标注 | 添加于 2014年6月16日星期一 上午10:13:07</div></p>
+<p><div>3. </div>
+<div>- 您在位置 #5444 的书签 | 添加于 2014年6月22日星期日 上午2:10:42</div></p>
+<p><div>4. Power resides where men believe it resides.</div>
+<div>- 您在位置 #15878-15878的标注 | 添加于 2014年8月17日星期日 下午4:46:12</div></p>
+<p><div>5. “A shadow on the wall,” Varys murmured, “yet shadows can kill. And ofttimes a very small man can cast a very large shadow.”</div>
+<div>- 您在位置 #15879-15880的标注 | 添加于 2014年8月17日星期日 下午4:46:44</div></p>
+<p><div>6. “When you tear out a man’s tongue, you are not proving him a liar, you’re only telling the world that you fear what he might say.”</div>
+<div>- 您在位置 #17357-17358的标注 | 添加于 2014年8月19日星期二 下午11:23:33</div></p>
+<p><div>7. “My people hold that there is no shame to be found in the pillow house. In the Summer Isles, those who are skilled at giving pleasure are greatly esteemed.</div>
 <div>- 您在位置 #17493-17494的标注 | 添加于 2014年8月20日星期三 上午12:19:32</div></p>
 </body></html>
