* _posts/2015-07-07-css_tips.html:

--- a/_posts/2015-07-07-css_tips.html
+++ b/_posts/2015-07-07-css_tips.html
@@ -1,5 +1,5 @@
 <style>
-  a {
+  a.test_css {
   background-color: #DF6558;
   font-weight: bold;
   padding: 10px 15px;
@@ -11,4 +11,4 @@
   }
 </style>
 
-<a > bookmarklet </a>
+<a class="test_css"> bookmarklet </a>
