--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 ---
 layout: frontpage
 ---
-<img src="https://img3.doubanio.com/view/photo/large/public/p2431584680.jpg" />
+
+<img id="cover-image" src="https://img3.doubanio.com/view/photo/l/public/p2431584680.jpg" />
+<p id="cover-desc" style="text-align:center;"> 高雄 台湾</p>
+
+<script type="text/javascript" src="/js/cover.js"></script> <!-- random a cover image >
