--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 layout: frontpage
 ---
 
-<img id="cover-image" src="https://img3.doubanio.com/view/photo/l/public/p2431584680.jpg" />
-<p id="cover-desc" style="text-align:center;"> 高雄 台湾</p>
+<img id="cover-image" src="" />
 
 <script type="text/javascript" src="/js/cover.js"></script> <!-- random a cover image >
