--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@ layout: frontpage
 
 <img id="cover-image" src="" />
 
-<script type="text/javascript" src="/js/cover.js"></script> <!-- random a cover image >
+<script type="text/javascript" src="/assets/js/cover.js"></script> <!-- random a cover image >
